Remove margin from main-heading and welcome-para to prevent horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body{
     /* reset defaults */
     padding: 0;
     margin: 0;
+    border:0;
     /* incl. padding and border within total height/width */
     box-sizing: border-box;
 
@@ -23,11 +24,11 @@ body{
 .main-headings {
     border:4px solid #484848;
     border-radius: 4px;
-    margin: 1px;
 
     /* for responsivity */
     width: 100%;
     height: auto;
+    box-sizing: border-box;
 
     /* credit: https://stackoverflow.com/questions/5703552/how-can-i-center-text-horizontally-and-vertically-inside-a-div-block (Approach 2 - Flexbox method) */
     display:flex;
@@ -49,13 +50,13 @@ body{
     text-align:center;
     color: white;
     background-color: #484848;
-    border:2px solid white;
+    border:4px solid white;
     border-radius: 4px;
-    margin: 1px;
 
     /* for responsivity */
     width: 100%;
     height: auto;
+    box-sizing: border-box;
 
 }
 
@@ -75,8 +76,9 @@ body{
 /* main navigation menu */
 #main-nav{
     width: 100%;
-    /* height: 400px; */
     height:auto;
+    box-sizing: border-box;
+
     margin:50px auto;
     display: grid;
 }
@@ -107,6 +109,7 @@ body{
 
     width: 100%;
     height: 50px;
+    box-sizing: border-box;
 
     /* credit: https://stackoverflow.com/questions/5703552/how-can-i-center-text-horizontally-and-vertically-inside-a-div-block (Approach 2 - Flexbox method) */
     display:flex;
